--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "lbc-scraper",
+  "name": "lbc-scraper-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "express": "^4.17.1",
     "puppeteer": "^5.5.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.10",
     "@types/puppeteer": "^5.4.0"
   },
   "scripts": {
-    "start": "tsc index.ts && node index.js",
+    "start": "tsc && node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
